# dj-portfolio

./: .gitignore  pyproject.toml
src/auth/: apps.py  forms.py  urls.py  views.py
src/contacts/: models.py
src/core/: settings.py  urls.py
src/cv/: forms.py  models.py  urls.py  views.py
src/cv/migrations/: 0001_initial.py  0002_cv_position.py  0003_remove_cv_position.py
src/language/: forms.py  models.py  urls.py  views.py
src/language/migrations/: 0001_initial.py  0002_alter_language_level.py  0003_alter_language_options.py  0004_rename_user_language_profile.py
src/portfolio/: models.py  urls.py
src/portfolio/migrations/: 0001_initial.py  0002_alter_skill_options_skill_description_skill_level_and_more.py  0003_portfolio_extra_info_portfolio_info.py  0004_remove_portfolio_unique_portfolio_name_constraint_and_more.py
src/static/user/: create_profile.css
src/templates/include/: _footer.html  _navbar.html
src/templates/layout/: base.html
src/user/: apps.py  forms.py  generic.py  mixins.py  models.py  monkey_patching.py  urls.py  views.py
src/user/migrations/: 0001_initial.py  0002_rename_name_profile_first_name_profile_birth_place_and_more.py  0003_rename_second_name_profile_last_name.py  0004_alter_contact_options_alter_profile_options_and_more.py  0005_remove_contact_contact_uniqueness_and_more.py  0006_alter_profile_date_birth_employment_education_and_more.py  0007_alter_profile_residence_place.py  0008_alter_education_options.py  0009_remove_contact_contact_uniqueness_and_more.py  0010_remove_contact_is_link_alter_contact_data_and_more.py  (+8 more)
(+41 files in other folders)
