[tool.poetry]
name = "dj-portfolio"
version = "0.1.0"
description = "project to host youre portfolio"
authors = ["MuzykaAndrii <andrymyzik@gmail.com>"]
readme = "README.md"
packages = [{include = "dj_portfolio"}]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.3"
python-dotenv = "^1.0.0"
pillow = "^10.0.0"
django-widget-tweaks = "^1.4.12"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
